When using link group to scene > make single user, armatures stop working temporarily. #40010

Closed
opened 2014-05-03 14:17:42 +02:00 by Paweł Łyczkowski · 6 comments

System Information
Windows 8.1

Blender Version
Hash: 198f5e5

Short description of error
When using link group to scene > make single user, armatures stop working temporarily. Saving and reloading the files fixes the problem.

Exact steps for others to reproduce the error
Default scene > add Armature > Parent Cube to Armature using Parent - Armature Deform - With Automatic Weights > Add both Armature and Cube to a new group > Add new scene > Link Armature + Cube to the new scene > in the new scene, run Make Single Object - Object on Armature + Cube > Go into pose mode on the Armature > the Cube does not follow the bone > Saving and reloading the file fixes the problem.

**System Information** Windows 8.1 **Blender Version** Hash: 198f5e5 **Short description of error** When using link group to scene > make single user, armatures stop working temporarily. Saving and reloading the files fixes the problem. **Exact steps for others to reproduce the error** Default scene > add Armature > Parent Cube to Armature using Parent - Armature Deform - With Automatic Weights > Add both Armature and Cube to a new group > Add new scene > Link Armature + Cube to the new scene > in the new scene, run Make Single Object - Object on Armature + Cube > Go into pose mode on the Armature > the Cube does not follow the bone > Saving and reloading the file fixes the problem.

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Paweł Łyczkowski 2014-05-03 14:17:43 +02:00

Added subscriber: @PawelLyczkowski-1

Added subscriber: @PawelLyczkowski-1

This issue was referenced by blender/blender-addons-contrib@a1ba57a008

This issue was referenced by blender/blender-addons-contrib@a1ba57a008286e0ff213016be5173d30178107fa

This issue was referenced by a1ba57a008

This issue was referenced by a1ba57a008286e0ff213016be5173d30178107fa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a1ba57a008.

Closed by commit a1ba57a008.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40010
No description provided.