Fix T40010: Single user looses parent relationship (temporarily)